# TextEditor

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  text_editor.pro
config/: text_editor.rc
forms_ui/: text_editor.ui
headers/: status_bar.hpp  text_editor.hpp
sources/: main.cpp  status_bar.cpp  text_editor.cpp
